--- a/src/spacing.css
+++ b/src/spacing.css
@@ -1,10 +1,26 @@
-/* Spacing Variables */
+.button,
+button,
+dd,
+dt,
+li {
+  margin-bottom: 1rem;
+}
 
-:root {
-  --spacing-1: 0.8rem;
-  --spacing-2: 1.2rem;
-  --spacing-3: 1.6rem;
-  --spacing-4: 2.4rem;
-  --spacing-5: 3.2rem;
-  --spacing-6: 4.8rem;
+fieldset,
+input,
+select,
+textarea {
+  margin-bottom: 1.5rem;
+}
+
+blockquote,
+dl,
+figure,
+form,
+ol,
+p,
+pre,
+table,
+ul {
+  margin-bottom: 2.5rem;
 }
